; ModuleID = '/home/carl/AnghaBench/tig/src/extr_argv.c_argv_number_formatter.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_argv.c_argv_number_formatter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.format_context = type { i32, i32 }
%struct.format_var = type { i64 }

@.str = private unnamed_addr constant [4 x i8] c"%ld\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.format_context*, %struct.format_var*)* @argv_number_formatter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @argv_number_formatter(%struct.format_context* %0, %struct.format_var* %1) #0 {
  %3 = alloca %struct.format_context*, align 8
  %4 = alloca %struct.format_var*, align 8
  %5 = alloca i64, align 8
  store %struct.format_context* %0, %struct.format_context** %3, align 8
  store %struct.format_var* %1, %struct.format_var** %4, align 8
  %6 = load %struct.format_var*, %struct.format_var** %4, align 8
  %7 = getelementptr inbounds %struct.format_var, %struct.format_var* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to i64*
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %5, align 8
  %11 = load %struct.format_context*, %struct.format_context** %3, align 8
  %12 = getelementptr inbounds %struct.format_context, %struct.format_context* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.format_context*, %struct.format_context** %3, align 8
  %15 = getelementptr inbounds %struct.format_context, %struct.format_context* %14, i32 0, i32 0
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @string_format_from(i32 %13, i32* %15, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i64 %16)
  ret i32 %17
}

declare dso_local i32 @string_format_from(i32, i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
